# kitchensink

./: .gitignore  README.md
dhall/: Prelude.dhall
hs/: .gitignore  cabal.project  cabal.project.local  kitchen-sink.cabal
hs/app/: Main.hs
hs/bridge/: Bridge.hs  Main.hs
hs/src/KitchenSink/: Blog.hs  Engine.hs  Prelude.hs
hs/src/KitchenSink/Blog/: Advanced.hs  Analyses.hs  AssembleSections.hs  Assembler.hs  Basics.hs  Destinations.hs  Fragments.hs  Generator.hs  Highlighting.hs  Layout.hs  Metadata.hs  Prelude.hs  Section.hs  Site.hs  SiteLoader.hs  Summary.hs  Target.hs  Wordcount.hs
hs/src/KitchenSink/Blog/Analyses/: Advanced.hs  Wordcount.hs
hs/src/KitchenSink/Blog/Assembler/: Base.hs  Sections.hs
hs/src/KitchenSink/Blog/Assembler/Sections/: CommonMark.hs  Json.hs  PreRendered.hs  Primitives.hs
hs/src/KitchenSink/Blog/Layout/: Destinations.hs  Metadata.hs
hs/src/KitchenSink/Blog/Section/: Base.hs  Parser.hs  Payloads.hs
hs/src/KitchenSink/Commonmark/: BlogHTML.hs  Free.hs  HashTag.hs  Highlighting.hs
hs/src/KitchenSink/Core/: Assembler.hs  Generator.hs  Section.hs
hs/src/KitchenSink/Core/Assembler/: Base.hs  Sections.hs
hs/src/KitchenSink/Core/Assembler/Sections/: CommonMark.hs  Json.hs  PreRendered.hs  Primitives.hs
hs/src/KitchenSink/Core/Section/: Base.hs  Parser.hs  Payloads.hs
hs/src/KitchenSink/Engine/: Api.hs  Config.hs  Counters.hs  Handlers.hs  MultiSite.hs  MultiSiteConfig.hs  OnTheFly.hs  Produce.hs  Runtime.hs  Serve.hs  SiteBuilder.hs  SiteConfig.hs  SiteLoader.hs  Track.hs  Utils.hs
hs/src/KitchenSink/Layout/: Base.hs  Blog.hs
hs/src/KitchenSink/Layout/Blog/: Analyses.hs  ArticleTypes.hs  Destinations.hs  Extensions.hs  Fragments.hs  Metadata.hs  SpecialArticles.hs  Summary.hs  Targets.hs
hs/src/KitchenSink/Layout/Blog/Analyses/: Advanced.hs  ArticleInfos.hs  FileCount.hs  GlossaryGrouping.hs  SiteGraph.hs  SkyLine.hs  TextRender.hs  TopicStats.hs  Wordcount.hs
purs/graphexplorer/: package-lock.json  packages.dhall  spago.dhall  spago.yaml
purs/graphexplorer/src/: EChart.purs  KSGraph.purs  Main.purs
purs/graphexplorer/src/Echarts/: Echarts.js  Echarts.purs
purs/kitchen-sink-compat/: packages.dhall  spago.dhall  spago.yaml
purs/kitchen-sink-compat/src/: Bridge.purs  KitchenSink.purs
purs/kitchen-sink-compat/src/KitchenSink/: Blog.purs
purs/kitchen-sink-compat/src/KitchenSink/Blog/: Advanced.purs
purs/kitchen-sink-compat/src/KitchenSink/Layout/Blog/: Summary.purs
purs/kitchen-sink-compat/src/KitchenSink/Layout/Blog/Analyses/: Advanced.purs  ArticleInfos.purs  SiteGraph.purs  SkyLine.purs
purs/search-box/: packages.dhall  spago.dhall  spago.yaml
purs/search-box/src/: Main.purs  Searchbox.purs
scaffolding/: glossary.cmark.tmpl  hashtags.cmark.tmpl  index.cmark.tmpl  kitchen-sink.json  newpage.cmark.tmpl  outputdir.sh  sourcedir.sh  tags.cmark.tmpl  topics.cmark.tmpl
scaffolding/css/: article.css  colors.css  index.css
scaffolding/js/: add-dev-route.js  search-box.js  topicgraph.js
scripts/: build-js-components.sh  import-scaffold.sh  notify-google.sh  publish.sh  test-scaffold.sh
website-scripts/: trivia.sh
website-src/: add-dev-route.js  architecture-01-pipeline.dot  architecture-02-engine-pipeline.dot  architecture-03-in-depth-engine-pipeline.dot  article.css  articles-listing.css  auto-reload-001-dot.webm  auto-reload-002-liveedit.webm  autoreload.js  copy-snippets.js  design-points.cmark  dev.css  development.cmark  echart-histogram.js  engine.cmark  features-002-dot-demo.dot  features.cmark  getting-started.cmark  glossary.cmark  hashtags.cmark  index.cmark  index.css  kitchen-sink-dot-json.cmark  kitchen-sink.json  layouts.cmark  navigation.css  one-time-commands-001-produce.webm  other-formats.cmark  philosophy.cmark  robots.txt  search-box.js  sections-dhall.cmark  sections.cmark  site-graph.js  tags.cmark  tags.css  topicgraph.js  topics.css  wishlist.cmark
