cabal-version:      2.4
name:               kitchen-sink
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: KitchenSink.Blog
                 , KitchenSink.Blog.Assembler
                 , KitchenSink.Blog.Advanced
                 , KitchenSink.Blog.AssembleSections
                 , KitchenSink.Blog.Basics
                 , KitchenSink.Blog.Generator
                 , KitchenSink.Blog.Highlighting
                 , KitchenSink.Blog.Layout
                 , KitchenSink.Blog.Prelude
                 , KitchenSink.Blog.Section
                 , KitchenSink.Blog.Site
                 , KitchenSink.Blog.SiteLoader
                 , KitchenSink.Blog.Target
                 , KitchenSink.Blog.Wordcount
                 , KitchenSink.Commonmark.BlogHTML
                 , KitchenSink.Commonmark.Free
                 , KitchenSink.Engine

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
                    , TypeApplications
                    , NoImplicitPrelude
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                    , aeson
                    , async
                    , bytestring
                    , containers
                    , directory
                    , dhall
                    , lens-family-core
                    , filepath
                    , process-extras
                    , text
                    , time
                    , commonmark
                    , commonmark-extensions
                    , lucid
                    , megaparsec
                    , optparse-generic
                    , prometheus-client
                    , blaze-markup
                    , blaze-html
                    , skylighting-core
                    , skylighting
                    , servant
                    , servant-server
                    , process
                    , prodapi
                    , stm
                    , http-types
                    , wai
                    , warp
                    , wai-extra
                    , fsnotify >= 0.4.0.0

    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options: -Wall -Werror -threaded

executable kitchen-sink
    main-is:          Main.hs
    build-depends:    base >=4.14.3.0
                    , kitchen-sink
    ghc-options: -O2 -threaded
    hs-source-dirs:   app
