cabal-version:      2.4
name:               kitchen-sink
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: KitchenSink.Blog
                 , KitchenSink.Blog.Analyses
                 , KitchenSink.Blog.Analyses.Advanced
                 , KitchenSink.Blog.Analyses.Wordcount
                 , KitchenSink.Blog.Assembler
                 , KitchenSink.Blog.Assembler.Base
                 , KitchenSink.Blog.Assembler.Sections
                 , KitchenSink.Blog.Assembler.Sections.CommonMark
                 , KitchenSink.Blog.Assembler.Sections.PreRendered
                 , KitchenSink.Blog.Assembler.Sections.Json
                 , KitchenSink.Blog.Assembler.Sections.Primitives
                 , KitchenSink.Blog.Build.Site
                 , KitchenSink.Blog.Build.Target
                 , KitchenSink.Blog.Generator
                 , KitchenSink.Blog.Prelude
                 , KitchenSink.Blog.Section
                 , KitchenSink.Blog.Section.Base
                 , KitchenSink.Blog.Section.Parser
                 , KitchenSink.Blog.Section.Payloads
                 , KitchenSink.Commonmark.BlogHTML
                 , KitchenSink.Commonmark.Highlighting
                 , KitchenSink.Commonmark.Free
                 , KitchenSink.Engine
                 , KitchenSink.Engine.Api
                 , KitchenSink.Engine.Config
                 , KitchenSink.Engine.Counters
                 , KitchenSink.Engine.Handlers
                 , KitchenSink.Engine.Runtime
                 , KitchenSink.Engine.SiteConfig
                 , KitchenSink.Engine.Track

                 , KitchenSink.Blog.Layout
                 , KitchenSink.Blog.Layout.Destinations
                 , KitchenSink.Blog.SiteLoader

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
                    , TypeApplications
                    , NoImplicitPrelude
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                    , aeson
                    , async
                    , bytestring
                    , containers
                    , directory
                    , dhall
                    , lens-family-core
                    , feed
                    , filepath
                    , http-reverse-proxy
                    , http-client
                    , process-extras
                    , text
                    , time
                    , commonmark
                    , commonmark-extensions
                    , lucid
                    , megaparsec
                    , optparse-generic
                    , prometheus-client
                    , blaze-markup
                    , blaze-html
                    , skylighting-core
                    , skylighting
                    , servant
                    , servant-server
                    , process
                    , prodapi
                    , stm
                    , http-types
                    , wai
                    , warp
                    , wai-extra
                    , xml-conduit
                    , fsnotify >= 0.4.0.0

    hs-source-dirs:   src
    default-language: GHC2021

    ghc-options: -Wall -Werror -threaded

executable kitchen-sink
    main-is:          Main.hs
    build-depends:    base >=4.14.3.0
                    , kitchen-sink
    ghc-options: -O2 -threaded
    hs-source-dirs:   app

executable kitchen-sink-purescript-bridge
    main-is:          Main.hs
    other-modules:    Bridge
    build-depends:    base >=4.14.3.0
                    , aeson
                    , kitchen-sink
                    , optparse-generic
                    , purescript-bridge
                    , text
    hs-source-dirs:   bridge
