cabal-version:      2.4
name:               kitchen-sink
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: KitchenSink.Layout.Base
                 , KitchenSink.Layout.Blog
                 , KitchenSink.Layout.Blog.Extensions
                 , KitchenSink.Layout.Blog.Targets
                 , KitchenSink.Layout.Blog.Summary
                 , KitchenSink.Layout.Blog.Analyses
                 , KitchenSink.Layout.Blog.Analyses.Advanced
                 , KitchenSink.Layout.Blog.Analyses.Wordcount
                 , KitchenSink.Layout.Blog.Fragments
                 , KitchenSink.Layout.Blog.Destinations
                 , KitchenSink.Layout.Blog.Metadata
                 , KitchenSink.Core.Assembler
                 , KitchenSink.Core.Assembler.Base
                 , KitchenSink.Core.Assembler.Sections
                 , KitchenSink.Core.Assembler.Sections.CommonMark
                 , KitchenSink.Core.Assembler.Sections.PreRendered
                 , KitchenSink.Core.Assembler.Sections.Json
                 , KitchenSink.Core.Assembler.Sections.Primitives
                 , KitchenSink.Core.Build.Site
                 , KitchenSink.Core.Build.Target
                 , KitchenSink.Core.Build.Trace
                 , KitchenSink.Core.Generator
                 , KitchenSink.Core.Section
                 , KitchenSink.Core.Section.Base
                 , KitchenSink.Core.Section.Parser
                 , KitchenSink.Core.Section.Payloads
                 , KitchenSink.Commonmark.BlogHTML
                 , KitchenSink.Commonmark.Highlighting
                 , KitchenSink.Commonmark.Free
                 , KitchenSink.Engine
                 , KitchenSink.Engine.Api
                 , KitchenSink.Engine.Config
                 , KitchenSink.Engine.Counters
                 , KitchenSink.Engine.Handlers
                 , KitchenSink.Engine.Runtime
                 , KitchenSink.Engine.SiteConfig
                 , KitchenSink.Engine.SiteLoader
                 , KitchenSink.Engine.SiteBuilder
                 , KitchenSink.Engine.Track
                 , KitchenSink.Prelude

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
                    , TypeApplications
                    , NoImplicitPrelude
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                    , aeson
                    , async
                    , bytestring
                    , containers
                    , directory
                    , dhall
                    , lens-family-core
                    , feed
                    , filepath
                    , http-reverse-proxy
                    , http-client
                    , process-extras
                    , text
                    , time
                    , commonmark
                    , commonmark-extensions
                    , lucid
                    , megaparsec
                    , optparse-generic
                    , prometheus-client
                    , blaze-markup
                    , blaze-html
                    , skylighting-core
                    , skylighting
                    , servant
                    , servant-server
                    , process
                    , prodapi
                    , stm
                    , http-types
                    , wai
                    , warp
                    , wai-extra
                    , xml-conduit
                    , fsnotify >= 0.4.0.0

    hs-source-dirs:   src
    default-language: GHC2021

    ghc-options: -Wall -Werror -threaded

executable kitchen-sink
    main-is:          Main.hs
    build-depends:    base >=4.14.3.0
                    , kitchen-sink
    ghc-options: -O2 -threaded
    hs-source-dirs:   app

executable kitchen-sink-purescript-bridge
    main-is:          Main.hs
    other-modules:    Bridge
    build-depends:    base >=4.14.3.0
                    , aeson
                    , kitchen-sink
                    , optparse-generic
                    , purescript-bridge
                    , text
    hs-source-dirs:   bridge
